# EEOver

./: CMakeLists.txt  README.md  ee.cpp  generate_random_ellipses.py  plot.py  setup.py  solvers.cpp
